Overhauled forward_amd.py, added tr_with_amd.py and ancillary files.

--- a/templates/enqueue_call.xml
+++ b/templates/enqueue_call.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Response>
   <Say voice="alice">Connecting your call</Say>
-  <Dial><Conference endConferenceOnExit="true">{{ inbound_sid }}</Conference></Dial>
+  <Enqueue workflowSid="{{ workflow_sid }}">
+    <Task>{"caller_id":"{{ caller_id }}"}</Task>
+  </Enqueue>
 </Response>
